--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vireo",
-  "version": "5.8.6-21",
+  "version": "5.8.5",
   "description": "SDK for an experimental vireo runtime engine.",
   "devDependencies": {
     "colors": "^1.1.2",
