Add cpp files and alphabetize owners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,10 +6,12 @@
 
 # Owners of specific locations in the repo.
 # Order is important. The last matching pattern has the most precedence.
-make-it/*                   @spathiwa @rajsite
+make-it/*                   @rajsite @spathiwa
 Vireo_VS/*                  @cglzaguilar @sanmut
 Vireo_Xcode/*               @spathiwa
 *.js                        @rajsite
 *.md                        @rajsite
 *.txt                       @rajsite
 .*                          @rajsite
+*.h                         @cglzaguilar @sanmut @spathiwa
+*.cpp                       @cglzaguilar @sanmut @spathiwa
