--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,10 @@ before_script:
 - make lint
 - npm run lint
 - make
+- make vjs BUILD=debug
+- make vjs BUILD=profile
 - make unittest
+- tar -tf $(npm pack)
 script:
 - make testjs
 - make testnative
