--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,7 +13,8 @@ install:
   - chocolatey install make
   - chocolatey install gnuwin32-coreutils.portable
   - npm install
-  - pip install --user -r requirements.txt
+  - pip install tox
+  - ps: Start-Process npm "run httpbin" -PassThru
   - git clone https://github.com/juj/emsdk.git
   - cd emsdk && git checkout b2ebcffbbbc2ba64d5697dc5c37fed530bafecda && cd ..
   - emsdk\emsdk install sdk-1.37.9-64bit
@@ -24,7 +25,6 @@ platform:
 configuration:
   - Debug
 before_build:
-  - ps: Start-Process npm "run httpbin" -PassThru
 # TODO capture standard out and error to log at the end?
 # TODO script needed to wait for server startup?
   - make lint
