First pass at User Event prims and Event structure support.
Implement CreateUserEvent, GenerateUserEvent, DestroyUserEvent.

Implement WaitForEventsAndDispatch (simplied case with 'automatic'
registration of users events.)

Stubs for RegisterForEvents and UnregisterForEvents.

Add Events.{h,cpp} to Makefiles/projects.

--- a/Vireo_VS/VireoCommandLine.vcxproj
+++ b/Vireo_VS/VireoCommandLine.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="..\source\core\DataQueue.cpp" />
     <ClCompile Include="..\source\core\Date.cpp" />
     <ClCompile Include="..\source\core\EventLog.cpp" />
+    <ClCompile Include="..\source\core\Events.cpp" />
     <ClCompile Include="..\source\core\ExecutionContext.cpp" />
     <ClCompile Include="..\source\core\GenericFunctions.cpp" />
     <ClCompile Include="..\source\core\MatchPat.cpp" />
@@ -63,6 +64,7 @@
     <ClInclude Include="..\source\include\DataTypes.h" />
     <ClInclude Include="..\source\include\Date.h" />
     <ClInclude Include="..\source\include\EventLog.h" />
+    <ClInclude Include="..\source\include\Events.h" />
     <ClInclude Include="..\source\include\ExecutionContext.h" />
     <ClInclude Include="..\source\include\Instruction.h" />
     <ClInclude Include="..\source\include\LVDateTimeRecord.h" />
