--- a/package.json
+++ b/package.json
@@ -13,27 +13,25 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-edge-launcher": "^0.4.2",
-    "karma-firefox-launcher": "^1.0.0",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-jasmine-spec-tags": "^1.0.1",
-    "karma-phantomjs-launcher": "^1.0.2",
     "karma-verbose-reporter": "^0.0.6",
+    "puppeteer": "^1.1.1",
     "requirejs": "^2.3.5",
     "shx": "^0.2.2",
     "whatwg-fetch": "^2.0.3",
     "xhr2": "^0.1.4"
   },
   "scripts": {
-    "test": "npm run lint && npm run karma -- --browsers Chrome",
+    "test": "karma start --browsers ChromeHeadlessNoSandbox,FirefoxHeadless",
+    "test-dev": "karma start --browsers ChromeHeadlessNoSandbox --skip-tags Slow",
+    "test-manual": "karma start --no-single-run",
+    "test-win": "karma start --browsers Chrome,Firefox,Edge && karma start --browsers IE --skip-tags FailsIE",
+    "test-coverage": "karma start karma.coverage.conf.js",
     "lint": "eslint .",
-    "karma": "karma start --single-run",
-    "karma-start": "karma start",
-    "karma-win": "karma start --single-run --browsers PhantomJS --skip-tags FailsPhantomJS,Slow && karma start --single-run --browsers Chrome,Firefox,IE,Edge",
-    "karma-coverage": "karma start karma.coverage.conf.js",
-    "karma-chrome": "karma start --single-run --browsers Chrome --skip-tags Slow",
-    "karma-phantomjs-debug": "karma start --single-run --browsers PhantomJS_Debug",
     "prehttpbin": "python -V && pip -V && virtualenv --version && tox --version",
     "httpbin": "tox",
     "httpbin-start": "start cmd /c npm run httpbin",
