Created module and entry points for property node support

--- a/Vireo_VS/VireoCommandLine.vcxproj
+++ b/Vireo_VS/VireoCommandLine.vcxproj
@@ -47,6 +47,7 @@
     <ClCompile Include="..\source\io\FileIO.cpp" />
     <ClCompile Include="..\source\io\HttpClient.cpp" />
     <ClCompile Include="..\source\io\JavaScriptInvoke.cpp" />
+    <ClCompile Include="..\source\io\PropertyNode.cpp" />
     <ClCompile Include="..\source\io\WebSocketClient.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -54,8 +55,10 @@
     <None Include="..\source\io\library_canvas2d.js" />
     <None Include="..\source\io\library_httpClient.js" />
     <None Include="..\source\io\library_javaScriptInvoke.js" />
+    <None Include="..\source\io\library_propertyNode.js" />
     <None Include="..\source\io\library_webSocketClient.js" />
     <None Include="..\source\io\module_javaScriptInvoke.js" />
+    <None Include="..\source\io\module_propertyNode.js" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\include\Array.h" />
