--- a/Vireo_VS/VireoCommandLine.vcxproj.filters
+++ b/Vireo_VS/VireoCommandLine.vcxproj.filters
@@ -127,6 +127,9 @@
     <ClCompile Include="..\source\io\JavaScriptInvoke.cpp">
       <Filter>VireoSource\IO</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\io\PropertyNode.cpp">
+      <Filter>VireoSource\IO</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\source\include\ConversionTable.def">
@@ -145,6 +148,12 @@
       <Filter>VireoSource\IO</Filter>
     </None>
     <None Include="..\source\io\module_javaScriptInvoke.js">
+      <Filter>VireoSource\IO</Filter>
+    </None>
+    <None Include="..\source\io\module_propertyNode.js">
+      <Filter>VireoSource\IO</Filter>
+    </None>
+    <None Include="..\source\io\library_propertyNode.js">
       <Filter>VireoSource\IO</Filter>
     </None>
   </ItemGroup>
