--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vireo",
-  "version": "7.2.2",
+  "version": "7.2.3-patch.0",
   "description": "SDK for an experimental vireo runtime engine.",
   "devDependencies": {
     "colors": "^1.1.2",
