--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
 - if ! git clone --depth 1 https://github.com/ni-kismet/emscripten-sdk.git; then cd emscripten-sdk && git remote update -p && git merge --ff-only origin/master && cd ..; fi
 - emscripten-sdk/emsdk activate --build=Release sdk-master-64bit
 - cat ~/.emscripten
-- emscripten-sdk/emsdk_env.sh && emcc -v
+- bash -c 'source emscripten-sdk/emsdk_env.sh && emcc -v'
 - gcc -v
 - node -v
 - npm -v
@@ -43,9 +43,9 @@ before_script:
 - make unittest
 - node -v
 - npm -v
-- emscripten-sdk/emsdk_env.sh && make vjs
-- emscripten-sdk/emsdk_env.sh && make vjs BUILD=debug
-- emscripten-sdk/emsdk_env.sh && make vjs BUILD=profile
+- bash -c 'source emscripten-sdk/emsdk_env.sh && make vjs'
+- bash -c 'source emscripten-sdk/emsdk_env.sh && make vjs BUILD=debug'
+- bash -c 'source emscripten-sdk/emsdk_env.sh && make vjs BUILD=profile'
 - node -v
 - npm -v
 - tar -tf $(npm pack)
