Run emsdk activate in new shell for AppVeyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,9 +18,9 @@ install:
   - ps: Start-Process npm "run httpbin" -PassThru
   - git clone https://github.com/juj/emsdk.git
   - cd emsdk && git checkout b2ebcffbbbc2ba64d5697dc5c37fed530bafecda && cd ..
-  - emsdk\emsdk install sdk-1.37.9-64bit
-  - emsdk\emsdk activate sdk-1.37.9-64bit
-  - emcc -v
+  - cmd: emsdk\emsdk install sdk-1.37.9-64bit
+  - cmd: emsdk\emsdk activate sdk-1.37.9-64bit
+  - cmd: emsdk\emsdk activate sdk-1.37.9-64bit && emcc -v
   - node -v
 platform:
   - Win32
@@ -34,7 +34,7 @@ before_build:
 build:
   project: Vireo_VS/VireoCommandLine.sln
 after_build:
-  - make vjs
+  - cmd: emsdk\emsdk activate sdk-1.37.9-64bit && make vjs
 test_script:
   - make testjs
   - make testnative
