--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,7 +20,7 @@ install:
   - cd emsdk && git checkout b2ebcffbbbc2ba64d5697dc5c37fed530bafecda && cd ..
   - ps: emsdk\emsdk install sdk-1.37.9-64bit
   - ps: emsdk\emsdk activate sdk-1.37.9-64bit
-  - cmd /c 'call emsdk\emsdk_env.bat && emcc'
+  - cmd /c 'emsdk\emsdk_env.bat && call emcc'
   - node -v
 platform:
   - Win32
