--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,6 +10,7 @@ init:
 - cmd: pip -V
 - ps: $PSVersionTable
 install:
+  - ps: Install-Product node 8
   - chocolatey install make
   - chocolatey install gnuwin32-coreutils.portable
   - npm install
@@ -17,9 +18,8 @@ install:
   - ps: Start-Process npm "run httpbin" -PassThru
   - git clone https://github.com/juj/emsdk.git
   - cd emsdk && git checkout b2ebcffbbbc2ba64d5697dc5c37fed530bafecda && cd ..
-  - emsdk\emsdk install sdk-1.37.9-64bit
-  - emsdk\emsdk activate sdk-1.37.9-64bit
-  - emcc -v
+  - ps: emsdk\emsdk install sdk-1.37.9-64bit
+  - ps: emsdk\emsdk activate sdk-1.37.9-64bit
 platform:
   - Win32
 configuration:
@@ -32,14 +32,13 @@ before_build:
 build:
   project: Vireo_VS/VireoCommandLine.sln
 after_build:
-  - make vjs
+  - cmd /c make-it\appveyor-vjs.bat
 test_script:
   - make testjs
   - make testnative
   - make testhttpbin
-  - npm run karma -- --browsers PhantomJS --skip-tags FailsPhantomJS
-  - npm run karma -- --browsers IE --skip-tags FailsIE
-  - npm run karma -- --browsers Chrome,Firefox
+  - npm run test
+  - npm run test -- --browsers IE --skip-tags FailsIE
 
 # Using the same naming convention as rust https://forge.rust-lang.org/platform-support.html
 after_test:
