--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,9 +11,9 @@ init:
 - ps: $PSVersionTable
 install:
   - ps: Install-Product node 8
-  - chocolatey install make
-  - chocolatey install gnuwin32-coreutils.portable
-  - npm install
+  - appveyor-retry chocolatey install make
+  - appveyor-retry chocolatey install gnuwin32-coreutils.portable
+  - appveyor-retry npm install
   - pip install tox
   - ps: Start-Process npm "run httpbin" -PassThru
   - git clone https://github.com/juj/emsdk.git
