Updating UTF8 third party library
Updating the third party library we're using to be the latest from sourceforge.

--- a/Vireo_VS/VireoCommandLine.vcxproj
+++ b/Vireo_VS/VireoCommandLine.vcxproj
@@ -57,6 +57,7 @@
     <None Include="..\source\core\vireo.loader.js" />
     <None Include="..\source\core\vireo.wrapper.js" />
     <None Include="..\source\include\ConversionTable.def" />
+    <None Include="..\source\include\thirdparty\utf8\doc\utf8cpp.html" />
     <None Include="..\source\io\library_canvas2d.js" />
     <None Include="..\source\io\library_httpClient.js" />
     <None Include="..\source\io\library_javaScriptInvoke.js" />
@@ -85,14 +86,15 @@
     <ClInclude Include="..\source\include\TDCodecLVFlat.h" />
     <ClInclude Include="..\source\include\TDCodecVia.h" />
     <ClInclude Include="..\source\include\TDCodecVib.h" />
+    <ClInclude Include="..\source\include\thirdparty\utf8\source\utf8.h" />
+    <ClInclude Include="..\source\include\thirdparty\utf8\source\utf8\checked.h" />
+    <ClInclude Include="..\source\include\thirdparty\utf8\source\utf8\core.h" />
+    <ClInclude Include="..\source\include\thirdparty\utf8\source\utf8\unchecked.h" />
     <ClInclude Include="..\source\include\Thread.h" />
     <ClInclude Include="..\source\include\Timestamp.h" />
     <ClInclude Include="..\source\include\TypeAndDataManager.h" />
     <ClInclude Include="..\source\include\TypeDefiner.h" />
     <ClInclude Include="..\source\include\UnitTest.h" />
-    <ClInclude Include="..\source\include\utf8\core.h" />
-    <ClInclude Include="..\source\include\utf8\unchecked.h" />
-    <ClInclude Include="..\source\include\utf8\utf8.h" />
     <ClInclude Include="..\source\include\VirtualInstrument.h" />
     <ClInclude Include="..\source\include\Waveform.h" />
   </ItemGroup>
