--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,7 +37,7 @@ test_script:
   - make testjs
   - make testnative
   - make testhttpbin
-  - npm run test
+  - npm run test -- --browsers FirefoxHeadless
   - npm run test -- --browsers IE --skip-tags FailsIE
 
 # Using the same naming convention as rust https://forge.rust-lang.org/platform-support.html
