--- a/Vireo_VS/VireoCommandLine.vcxproj.filters
+++ b/Vireo_VS/VireoCommandLine.vcxproj.filters
@@ -133,6 +133,9 @@
     <ClCompile Include="..\source\io\PropertyNode.cpp">
       <Filter>VireoSource\IO</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\core\ObjectRef.cpp">
+      <Filter>VireoSource\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\source\include\ConversionTable.def">
@@ -245,6 +248,9 @@
       <Filter>VireoSource\Include</Filter>
     </ClInclude>
     <ClInclude Include="..\source\include\DataReflectionVisitor.h">
+      <Filter>VireoSource\Include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\include\ObjectRef.h">
       <Filter>VireoSource\Include</Filter>
     </ClInclude>
   </ItemGroup>
