--- a/Vireo_VS/VireoCommandLine.vcxproj
+++ b/Vireo_VS/VireoCommandLine.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="..\source\core\Events.cpp" />
     <ClCompile Include="..\source\core\ExecutionContext.cpp" />
     <ClCompile Include="..\source\core\GenericFunctions.cpp" />
+    <ClCompile Include="..\source\core\JavaScriptRef.cpp" />
     <ClCompile Include="..\source\core\MatchPat.cpp" />
     <ClCompile Include="..\source\core\Math.cpp" />
     <ClCompile Include="..\source\core\NumericString.cpp" />
@@ -75,6 +76,7 @@
     <ClInclude Include="..\source\include\Events.h" />
     <ClInclude Include="..\source\include\ExecutionContext.h" />
     <ClInclude Include="..\source\include\Instruction.h" />
+    <ClInclude Include="..\source\include\JavaScriptRef.h" />
     <ClInclude Include="..\source\include\LVDateTimeRecord.h" />
     <ClInclude Include="..\source\include\Platform.h" />
     <ClInclude Include="..\source\include\RefNum.h" />
