--- a/VireoSDK.nuspec
+++ b/VireoSDK.nuspec
@@ -12,6 +12,6 @@
     <description>VireoSDK provides a subset of LabVIEW runtime functionality for smaller targets.</description>
   </metadata>
   <files>
-    <file src="dist/Release/esh.exe" target="" />
+    <file src="dist/Debug/esh.exe" target="" />
   </files>
 </package>
