--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -41,20 +41,10 @@ test_script:
   - npm run test -- --browsers FirefoxHeadless
   - npm run test -- --browsers IE --skip-tags FailsIE
 
-# Using the same naming convention as rust https://forge.rust-lang.org/platform-support.html
-after_test:
-  - set ESH_i686_DEBUG=esh_%APPVEYOR_REPO_TAG_NAME%_i686-pc-windows-msvc_debug.zip
-  - 7z a %ESH_i686_DEBUG% %APPVEYOR_BUILD_FOLDER%\dist\Debug\esh.exe %APPVEYOR_BUILD_FOLDER%\dist\Debug\esh.pdb %APPVEYOR_BUILD_FOLDER%\README.md %APPVEYOR_BUILD_FOLDER%\LICENSE.txt
 artifacts:
-  - path: '%ESH_i686_DEBUG%'
-    name: '%ESH_i686_DEBUG%'
-    type: Zip
+  - path: '*.nupkg'
 deploy:
-  provider: GitHub
-  description: $(APPVEYOR_REPO_COMMIT_MESSAGE)
-  auth_token:
-    secure: Asuu2xJwFoy8ML6DIsZf2mqlgdO2b1dQRCJALbYpUFNP/3DjuhBPDcWiSxTK6iw/
-  artifact: '%ESH_i686_DEBUG%'
-  force_update: true
-  on:
-    appveyor_repo_tag: true
+  provider: NuGet
+  artifact: '/.*\.nupkg/'
+  api_key:
+    secure: oy2ddkxen2s24ubtzqwquvpk7wu5uofe5dodhngw3zlz2u
