--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,11 +40,20 @@ test_script:
   - make testhttpbin
   - npm run test -- --browsers FirefoxHeadless
   - npm run test -- --browsers IE --skip-tags FailsIE
-
 artifacts:
   - path: '*.nupkg'
 deploy:
-  provider: NuGet
-  artifact: '/.*\.nupkg/'
-  api_key:
-    secure: CTuSIf5+uQFtl563xNMg4BC5WnAnYV1MfeVavlVgsP4P+zJVsrdWSjydgMEJYQb5
+  - provider: GitHub
+    description: $(APPVEYOR_REPO_COMMIT_MESSAGE)
+    auth_token:
+      secure: Asuu2xJwFoy8ML6DIsZf2mqlgdO2b1dQRCJALbYpUFNP/3DjuhBPDcWiSxTK6iw/
+    artifact: '%ESH_i686_DEBUG%'
+    force_update: true	
+    tag: $(APPVEYOR_REPO_TAG_NAME)	
+    on:	
+      appveyor_repo_tag: true
+
+  - provider: NuGet
+    artifact: '/.*\.nupkg/'
+    api_key:
+      secure: +HxCQLCj0U9w1/MNf7waD7PrbcC8KEM3ZNanofeyLt1j7kU0DbszxasZXtHWtSSE
