--- a/vireoSDK.props
+++ b/vireoSDK.props
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
-        <vireo_InstallDir>$(MSBuildThisFileDirectory)..\nipkgcore\</vireo_InstallDir>
+        <vireo_InstallDir>$(MSBuildThisFileDirectory)..\content\</vireo_InstallDir>
     </PropertyGroup>
-    <ItemGroup>
-        <vireo_Files Include="$(MSBuildThisFileDirectory)..\content\TestFiles\*.exe"/>
-    </ItemGroup>
 </Project>
